[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cipherion"
version = "0.1.1"
description = "Python SDK for the Cipherion field-level encryption API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["encryption", "cipherion", "field-level-encryption", "security", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/OneBoatSolutions/Cipherion-Python-SDK"
Documentation = "https://docs.cipherion.in"
Repository = "https://github.com/OneBoatSolutions/Cipherion-Python-SDK"
"Bug Tracker" = "https://github.com/OneBoatSolutions/Cipherion-Python-SDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cipherion"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cipherion --cov-report=term-missing"